# murmur

./: .gitignore  CLAUDE.md  package-lock.json  package.json
.claude/agents/: dao-analyst.md  dao-scribe.md  dao-tester.md  dao-worker.md
docs/: SETUP_LOG.md  TDD.md
docs/modules/DONE_step1-base/: execution.md  success.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  hotkey.rs  lib.rs  main.rs  tray.rs
src/css/: style.css
src/js/: app.js
