[package]
name = "murmur"
version = "0.1.0"
description = "Voice-to-text input helper"
authors = ["mupai"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "murmur_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
reqwest = { version = "0.13", features = ["json", "multipart"] }
cpal = "0.17"
enigo = "0.6"
tokio = { version = "1", features = ["full"] }
